force-app/main/default/objects/Partnership_Stakeholder__c/Partnership_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Partnership Stakeholder</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Partnership Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>