force-app/main/default/objects/Partnership_Stakeholder__c/fields/Partnership_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Agreement__c</fullName>
    <label>Partnership Agreement</label>
    <referenceTo>Commercial_Partnership_Agreement__c</referenceTo>
    <relationshipLabel>Partnership Stakeholders</relationshipLabel>
    <relationshipName>Partnership_Stakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>