force-app/main/default/objects/Partnership_Stakeholder__c/fields/Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stakeholder Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partnership Stakeholders</relationshipLabel>
    <relationshipName>Partnership_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>